# cinema_belgica_triplehop_scripts

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  config.ini.py  pyproject.toml
cinema_belgica_triplehop_scripts/: export_data.py  import_data.py  preprocess_data.py  preprocess_sources.py
data/fixtures/: tblCensorshipCutDetailedCategory.csv  tblCensorshipCutMainCategory.csv
human_readable_config/entity/: address.json  archive.json  archive_item.json  censorship.json  censorship_cut.json  censorship_cut_detailed_category.json  censorship_cut_main_category.json  city.json  company.json  company_name.json  continent.json  country.json  film.json  film_episode.json  mentioned_film_title.json  person.json  programme.json  programme_date.json  programme_item.json  publication.json  publication_type.json  venue.json
human_readable_config/relation/: address.json  address_city.json  archive_item_archive.json  censorship_appeal.json  censorship_cut.json  censorship_cut_category.json  censorship_cut_main_category.json  company_company.json  company_name.json  company_person.json  country_continent.json  episode_censorship.json  episode_film.json  film_censorship.json  film_company.json  film_country.json  film_person.json  mentioned_film_title.json  programme_item_film.json  programme_item_mentioned_film_title.json  programme_programme_date.json  programme_programme_item.json  programme_venue.json  publication_publication_type.json  venue_company.json  venue_person.json
