[tool.poetry]
name = "cinema_belgica_triplehop_scripts"
version = "0.1.0"
description = ""
authors = ["GhentCDH"]

[tool.poetry.dependencies]
python = "^3.7"
triplehop_import_tools = { path = "triplehop_import_tools", develop = true }
typer = "^0.6.1"
ujson = "^5.3.0"
edtf = "^4.0.1"
isbnlib = "^3.10.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
